--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,7 +4,7 @@ ja:
       default: "%Y/%m/%d %H:%M:%S"
       short: "%Y/%m/%d %H:%M"
   errors:
-    format: "%{attribute}%{message}"
+    format: "%{attribute}は%{message}"
     messages:
       blank: を入力してください
       too_long: は%{count}文字以内で入力してください
