--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -6,5 +6,5 @@ ja:
   errors:
     format: "%{attribute}は%{message}"
     messages:
-      blank: を入力してください
-      too_long: は%{count}文字以内で入力してください
+      blank: "必須です"
+      too_long: "%{count}文字以内で入力してください"
