--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,8 +1,35 @@
 ja:
+  title: ミニブログ
+  time_line: タイムライン
+  sign_up: ユーザ登録
+  login: ログイン
+  logout: ログアウト
+  retirement: ユーザ削除
+  edit_user: ユーザ編集
+  create_article: 投稿
+  following_user_articles: フォロー済タイムライン
+  all_user_articles: タイムライン
+  regist: 登録
+  update: 更新
+  back: 戻る
+  activerecord:
+    attributes:
+      article:
+        content: 内容
+      user:
+        username: ユーザ名
+        password: パスワード
+        password_confirmation: パスワード確認
+        current_password: 現在のパスワード
+        profile: プロファイル
+        blog_url: ブログURL       
   time:
     formats:
       default: "%Y/%m/%d %H:%M:%S"
       short: "%Y/%m/%d %H:%M"
+  password_message: "%{minimum_password_length}文字以上"
+  edit_password_message: "変更する場合は、現在のパスワードを入力してください"
+  edit_password2_message: "パスワードを変更しない場合は、入力不要"
   errors:
     format: "%{attribute}は%{message}"
     messages:
