--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -21,8 +21,8 @@ ja:
     messages:
       already_confirmed: 'は既に登録済みです。ログインしてください。'
       not_saved:
-        one: "エラーが発生したため %{resource} は保存されませんでした。"
-        other: "%{count} 件のエラーが発生したため %{resource} は保存されませんでした。"
+        one: "エラーが発生したため %{resource} は登録できませんでした"
+        other: "%{count} 件のエラーが発生したため %{resource} は登録できませんでした"
       blank: "が入力されていません。"
       too_short: "は%{count}文字以上に設定して下さい。"
       too_long: "は%{count}文字以下に設定して下さい。"
