--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,6 +1,5 @@
 ja:
-  title: ミニブログ
-  time_line: タイムライン
+  title: ミニッター
   sign_up: ユーザ登録
   login: ログイン
   logout: ログアウト
@@ -12,6 +11,8 @@ ja:
   regist: 登録
   update: 更新
   back: 戻る
+  post: 投稿
+  delete_user_message: ユーザを削除しますか？
   activerecord:
     attributes:
       article:
