--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,37 +1,61 @@
 ja:
   title: ミニブログ
-  sign_up: ユーザ登録
-  login: ログイン
-  logout: ログアウト
-  retirement: ユーザ削除
-  edit_user: ユーザ編集
-  following_user_posts: フォロー済タイムライン
-  all_user_posts: タイムライン
+  sign_up: 登録
+  sign_in: ログイン
+  sign_out: ログアウト
+  account: アカウント
+  posts:
+    following: フォロー済
+    all: タイムライン
   regist: 登録
   update: 更新
+  delete: 削除
   back: 戻る
   post: 投稿
-  delete_user_message: ユーザを削除しますか？
-  activerecord:
-    attributes:
-      post:
-        content: 内容
-      user:
-        username: ユーザ名
-        password: パスワード
-        password_confirmation: パスワード確認
-        current_password: 現在のパスワード
-        profile: 自己紹介
-        blog_url: ブログURL       
+  users:
+    registrations:
+      password_length_message: "%{minimum_password_length}文字以上"
+      edit:
+        message:
+          password: "パスワードを変更しない場合は、入力不要"
+          current_password: "変更する場合は、現在のパスワードを入力してください"
+          delete_confirm: アカウントを削除しますか？
   time:
     formats:
       default: "%Y/%m/%d %H:%M:%S"
       short: "%Y/%m/%d %H:%M"
-  password_message: "%{minimum_password_length}文字以上"
-  edit_password_message: "変更する場合は、現在のパスワードを入力してください"
-  edit_password2_message: "パスワードを変更しない場合は、入力不要"
+  activerecord:
+    attributes:
+      post:
+        content: 投稿内容
+      user:
+        username: ユーザ名
+        password: パスワード
+        password_confirmation: 確認用パスワード
+        current_password: 現在のパスワード
+        profile: プロフィール
+        blog_url: ブログURL
+  devise:
+    confirmations:
+      confirmed: "アカウントを登録しました。"
+    failure:
+      already_authenticated: "すでにログインしています。"
+      invalid: "%{authentication_keys} もしくはパスワードが不正です。"
+      not_found_in_database: "%{authentication_keys} もしくはパスワードが不正です。"
+      unauthenticated: "アカウント登録もしくはログインしてください。"
+    registrations:
+      destroyed: "を削除しました。またのご利用をお待ちしております。"
+      signed_up: "アカウント登録が完了しました。"
+      updated: "アカウント情報を変更しました。"
+    sessions:
+      signed_in: "ログインしました。"
+      signed_out: "ログアウトしました。"
+      already_signed_out: "既にログアウト済みです。"
   errors:
-    format: "%{attribute}は%{message}"
     messages:
-      blank: "必須です"
-      too_long: "%{count}文字以内で入力してください"
+      taken: は既に存在します
+      already_confirmed: "は既に登録済みです。ログインしてください。"
+      blank: "が入力されていません。"
+      too_short: "は%{count}文字以上を入力して下さい。"
+      too_long: "は%{count}文字以下を入力して下さい。"
+      confirmation: "があっていません。"
