--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -18,7 +18,6 @@ ja:
       edit:
         message:
           password: "パスワードを変更しない場合は、入力不要"
-          current_password: "変更する場合は、現在のパスワードを入力してください"
           delete_confirm: アカウントを削除しますか？
   time:
     formats:
@@ -44,7 +43,7 @@ ja:
       not_found_in_database: "%{authentication_keys} もしくはパスワードが不正です。"
       unauthenticated: "アカウント登録もしくはログインしてください。"
     registrations:
-      destroyed: "を削除しました。またのご利用をお待ちしております。"
+      destroyed: "アカウントを削除しました。またのご利用をお待ちしております。"
       signed_up: "アカウント登録が完了しました。"
       updated: "アカウント情報を変更しました。"
     sessions:
