modify comment errormssage

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -34,7 +34,7 @@ ja:
   activerecord:
     attributes:
       comment:
-        content: コメント内容
+        content: コメント
       post:
         content: 投稿内容
       user:
